2000-02-10  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (gtk_html_set_paragraph_style): New function.

	* htmlengine-edit-styles.c
	(html_engine_set_clueflow_style): New function.

	* htmlclueflow.c (html_clueflow_set_style): New function.

	* gtkhtml.c (update_styles): New helper function.
	(clueflow_style_to_paragraph_style): New helper function.
	(class_init): Install new signal
	`current_paragraph_style_changed'.
	(init): Initialize `paragraph_style' to
	`GTK_HTML_PARAGRAPH_STYLE_NORMAL'.

	* gtkhtml.h: New enum `GtkHTMLParagraphStyle'.  New signal
	`current_paragraph_style_changed'.  New member
	`GtkHTMLParagraphStyle'.

	* htmlengine-edit-styles.c: New file.
	* htmlengine-edit-styles.h: New file.

	* htmlengine-edit.c (html_engine_insert): Avoid inserting anything
	if the current object is NULL.

	* htmlundo.c (html_undo_add_undo_action): Update the stack size
	value when removing an element.

2000-02-09  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit.c (html_engine_insert): Support undo.

	* gtkhtml.c (key_press_event): (Temporarily) bind F1 to "undo", F2
	to "redo".

	* htmlengine-edit.c (html_engine_undo): New function.
	(html_engine_redo): New function.

	* htmlengine.c (html_engine_init): Initialize `undo'.
	(html_engine_destroy): Destroy it.

	* htmlengine.h: New member `undo' in `HTMLEngine'.

	* htmlundo-action.c: New file.
	* htmlundo-action.h: New file.

	* htmlundo.c: New file.
	* htmlundo.h: New file.

	* htmlcursor.c (html_cursor_goto_zero): New function.

	* htmlengine-edit.c (html_engine_jump_to_object): Use
	`html_cursor_jump_to()'.

	* htmlcursor.c (html_cursor_copy): New function.
	(html_cursor_dup): Use it.
	(html_cursor_up): Use it instead of doing direct C assignments
	between the structs.
	(html_cursor_down): Likewise.
	(html_cursor_jump_to): New function.  It is necessary to jump to a
	position while keeping the relative position value intact.
	(html_cursor_home): Reset relative position.
